# AI_slop

./: .env.example  .gitignore  README.md  database_schema.sql  debug_drive.py  frontend_briefing.md  google_cloud_setup.md  guide.md  pyproject.toml  requirements.txt
backend/: ec2_setup.md  find_drive_folders.py  generate_token.py
backend/.agent/workflows/: deploy.md
backend/assets/: README.md
backend/src/: __init__.py  config.py  main.py
backend/src/ai/: gemini_client.py
backend/src/database/: init_db.py  models.py
backend/src/generators/: subtitle_generator.py
backend/src/notifiers/: __init__.py  email_notifier.py
backend/src/scrapers/: reddit_scraper.py
backend/src/uploaders/: youtube_uploader.py
backend/tests/: test_smoke.py
src/ai/: prompts.py
src/api/: main.py
src/database/: connection.py  queries.py
src/generators/: audio_mixer.py  tts_generator.py  video_generator.py
src/processors/: censor.py  story_processor.py  text_splitter.py
src/scrapers/: reddit_scraper.py
src/uploaders/: __init__.py  drive_uploader.py  youtube_queue_processor.py
src/utils/: helpers.py  logger.py  retry.py
